objects/Account.object
<CustomObject>
    <fields>
        <fullName>Invoice_Template__c</fullName>
        <inlineHelpText>See Job Aid: Invoice Template Selections to determine your customer needs.</inlineHelpText>
        <label>Invoice Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple</label>
                </value>
                <value>
                    <fullName>Detailed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_delivery_Email__c</fullName>
        <inlineHelpText>This is the email address where eInvoices will be directed if eInvoicing has been elected</inlineHelpText>
        <label>Invoice Delivery Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Pricing_Agreement__c</fullName>
        <description>It is a system field not visible to users. This field is referenced in Agreement Flag.</description>
        <label>Is Pricing Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LTP_Territory_Owner__c</fullName>
        <formula>LTP_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;LTP_Territory__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LTP Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTP_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LTP Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Territory__c.Territory_Type__c</field>
                <operation>equals</operation>
                <value>AP, HY, LT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>LTP Accounts</relationshipLabel>
        <relationshipName>LTP_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <formula>REPORT_Last_Payment_Date__c</formula>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Log_In_Email__c</fullName>
        <description>External log in email from API in creating account criteria.</description>
        <label>Red Cross Store email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NAICS Code</label>
        <referenceTo>NAICS__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NAICS_Index_Name__c</fullName>
        <formula>NAICS_Code__r.Index_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Index Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Series__c</fullName>
        <label>Name Series</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_TSC_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New TSC Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (New TSC Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Fee_Expiration_Date__c</fullName>
        <label>No Fee Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Related_Cases__c</fullName>
        <description>This field is only used in ETL processes to indicate the number of related cases to this account.</description>
        <label>Number of Related Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Related_Contacts__c</fullName>
        <description>This field is only used in ETL processes to indicate the number of related contacts to this account.</description>
        <label>Number of Related Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Related_Opportunitites__c</fullName>
        <description>This field is only used in ETL processes to indicate the number of related opportunities to this account.</description>
        <label>Number of Related Opportunitites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Subsidiaries__c</fullName>
        <label>Number of Subsidiaries</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Terminated__c</fullName>
        <label>Number of Times Terminated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Order_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of Orders In Process</description>
        <inlineHelpText>Based on the total dollar value of open orders for all orders on the account. </inlineHelpText>
        <label>Open Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_SABA_LMS_Code__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>Original SABA LMS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHSS_Channel__c</fullName>
        <inlineHelpText>Used to identify the PHSS Sales Channel type.  Choose all that apply.</inlineHelpText>
        <label>PHSS Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AED</fullName>
                </value>
                <value>
                    <fullName>Authorized Provider</fullName>
                </value>
                <value>
                    <fullName>Business Client</fullName>
                </value>
                <value>
                    <fullName>CEP Agency</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Licensed Training Provider</fullName>
                </value>
                <value>
                    <fullName>NAT Agency</fullName>
                </value>
                <value>
                    <fullName>National Account Network</fullName>
                </value>
                <value>
                    <fullName>RCS Distributor</fullName>
                </value>
                <value>
                    <fullName>RCS Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <inlineHelpText>This is the status of customers&apos; timely payment</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Eligible for Reinstatement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <inlineHelpText>This is the number of days after the invoice date that a customer has to remit timely payment</inlineHelpText>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NET 30</fullName>
                    <default>true</default>
                    <label>NET 30</label>
                </value>
                <value>
                    <fullName>NET 45</fullName>
                </value>
                <value>
                    <fullName>NET 60</fullName>
                </value>
                <value>
                    <fullName>NET 75</fullName>
                </value>
                <value>
                    <fullName>NET 90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Payment_type__c</fullName>
        <description>identify which types are the customer preferred payment</description>
        <inlineHelpText>This is how customer will pay for products and services.</inlineHelpText>
        <label>Preferred Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit/Debit Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Agreement__c</fullName>
        <formula>IF( ISPICKVAL(Is_Pricing_Agreement__c, &quot;Yes&quot;) , &quot;Pricing&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Agreement_in_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Agreement in Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prodid__c</fullName>
        <description>For data migration only</description>
        <externalId>true</externalId>
        <label>Prodid</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REPORT_AR_0_30_Days__c</fullName>
        <description>Used only for Data upload to populate AR 0-30 Days</description>
        <label>REPORT AR 0-30 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_121_150_Days__c</fullName>
        <description>This field is used for Data Uplaod and updates AR 121-150 Days field</description>
        <label>REPORT AR 121-150 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_121_180_Days__c</fullName>
        <label>REPORT AR 121-180 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_180_Days__c</fullName>
        <description>This field is used for data load and updates field AR &gt;180 Days</description>
        <label>REPORT AR &gt;180 Days</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REPORT_AR_Last_Report__c</fullName>
        <description>This field is used as a data load and updates AR Last Report field</description>
        <label>REPORT AR Last Report</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>REPORT_Collections_Termination_Date__c</fullName>
        <label>REPORT Collections Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REPORT_Last_Payment_Date__c</fullName>
        <description>This field is used for Data load and updates LAst Payment Date</description>
        <label>REPORT Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REPORT_Total_AR__c</fullName>
        <description>This field is used for data upload for Total AR</description>
        <label>REPORT Total AR</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Red_Cross_PO__c</fullName>
        <description>This number is created for use with pre payment and invoice approval</description>
        <inlineHelpText>This is the same as the Purchase Order ID in Saba. If the customer issued a PO, the number they provided will go in both fields</inlineHelpText>
        <label>Red Cross PO#</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Cross_PO_expiration_Date__c</fullName>
        <description>This is the date the Red Cross PO will expire</description>
        <inlineHelpText>This is the same as the Expiration Date on the Purchase Order in Saba.</inlineHelpText>
        <label>Red Cross PO# Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SABA_BillingCity__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA BillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_BillingCountry__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA BillingCountry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_BillingPostalCode__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA BillingPostalCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_BillingState__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA BillingState</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_BillingStreet__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA BillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SABA_Billing_Contact_Email__c</fullName>
        <description>Saba-Legacy data migration</description>
        <label>SABA Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SABA_Billing_Contact_Name__c</fullName>
        <description>Saba legacy data migration</description>
        <label>SABA Billing Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Billing_Contact_Phone__c</fullName>
        <description>Saba-Legacy data migration</description>
        <label>SABA Billing Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SABA_Company_affiliation__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Company affiliation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Createdby__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Createdby</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Createddate__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Createddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SABA_LMS_Code__c</fullName>
        <label>SABA\LMS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Lastmodifiedby__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Lastmodifiedby</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_Lastmodifieddate__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Lastmodifieddate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SABA_Name__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_ORG_KEY__c</fullName>
        <description>Unique id for SABA data migration.</description>
        <externalId>true</externalId>
        <label>SABA ORG KEY</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SABA_ORG_Match_Type__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <label>SABA ORG Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NetNew</fullName>
                </value>
                <value>
                    <fullName>1-1</fullName>
                </value>
                <value>
                    <fullName>M-1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SABA_Org_Type__c</fullName>
        <description>Legacy SABA fields- Data Migration from SABA</description>
        <inlineHelpText>Indicates the type of customer relationship this organization has with Training Services.  Required for Field Sales and BGST customer accounts.</inlineHelpText>
        <label>Org Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP NAN</fullName>
                </value>
                <value>
                    <fullName>AP/BC</fullName>
                </value>
                <value>
                    <fullName>AP/BC/FS</fullName>
                </value>
                <value>
                    <fullName>AP/FS</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AQ NAN</fullName>
                </value>
                <value>
                    <fullName>BC</fullName>
                </value>
                <value>
                    <fullName>BC/FS</fullName>
                </value>
                <value>
                    <fullName>Blood Region</fullName>
                </value>
                <value>
                    <fullName>CEPA</fullName>
                </value>
                <value>
                    <fullName>Community Branch</fullName>
                </value>
                <value>
                    <fullName>Community Chapter</fullName>
                </value>
                <value>
                    <fullName>Division</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>FS NAN</fullName>
                </value>
                <value>
                    <fullName>FS/APNAN</fullName>
                </value>
                <value>
                    <fullName>House AQ</fullName>
                </value>
                <value>
                    <fullName>House AP</fullName>
                </value>
                <value>
                    <fullName>House FS</fullName>
                </value>
                <value>
                    <fullName>House LTP</fullName>
                </value>
                <value>
                    <fullName>LTP</fullName>
                </value>
                <value>
                    <fullName>NATA</fullName>
                </value>
                <value>
                    <fullName>NATI</fullName>
                </value>
                <value>
                    <fullName>NHQ</fullName>
                </value>
                <value>
                    <fullName>Red Cross - Other</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Regional Branch</fullName>
                </value>
                <value>
                    <fullName>Regional Chapter</fullName>
                </value>
                <value>
                    <fullName>SAF AP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_Account_Number_Text__c</fullName>
        <label>SF Account Number Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Account_Number__c</fullName>
        <formula>if(OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
if(ISBLANK(SF_Account_Number_Text__c), if(ISBLANK(Salesforce_Auto_Number__c),CFS_Account_Number__c,Salesforce_Auto_Number__c), SF_Account_Number_Text__c) ,null)</formula>
        <label>SF Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SIC Code</label>
        <referenceTo>SIC__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <formula>SIC_Code__r.SIC_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Saba_Id__c</fullName>
        <description>Unique identifier for a customer account in CFS. Initial data load contains unique identifier in Saba.</description>
        <externalId>true</externalId>
        <label>Saba Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Auto_Number__c</fullName>
        <displayFormat>SF{00000000}</displayFormat>
        <label>Salesforce Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Separate_Invoice_For_Products__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Product purchases and training services transactions together or separate.</inlineHelpText>
        <label>Separate Invoice For Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>Store Shipping Address for Training Event</description>
        <formula>ShippingStreet + &quot; &quot;+ ShippingCity + &quot; &quot;+ ShippingState + &quot; &quot;+ ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>Source System field used for Data Migration.</description>
        <label>Source System</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Invoicing__c</fullName>
        <description>This field holds information to determine processing transactions for special invoicing. Required for determining customer class.</description>
        <label>Special Invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHAREPOINT INVOICING</fullName>
                </value>
                <value>
                    <fullName>DO NOT MAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spots_Taken__c</fullName>
        <description>This field should only be populated for bucket accounts. This field represents how many contacts are under the bucket account.</description>
        <label>Spots Taken in Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Account Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account_Type__c</fullName>
        <label>Strategic Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Strategic_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Enhanced Support</fullName>
                </value>
                <value>
                    <fullName>Special Handling</fullName>
                    <label>Special Handling - SCC</label>
                </value>
                <value>
                    <fullName>Special Handling - Field</fullName>
                </value>
                <value>
                    <fullName>SCC Scheduling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to designate this Account as a Strategic Account.</description>
        <label>Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Cert_Expiry_Date__c</fullName>
        <label>Tax Exempt Cert Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <label>Tax Exempt?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_ID_Number__c</fullName>
        <label>Tax ID Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terminate_Reinstate_Date__c</fullName>
        <inlineHelpText>This date reflects the day the account was either Terminated or Reinstated. Status other than these will not update this field.</inlineHelpText>
        <label>Terminate/Reinstate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Reason__c</fullName>
        <inlineHelpText>This is the reason for current payment status</inlineHelpText>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Payment_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Exception Granted</fullName>
                </value>
                <value>
                    <fullName>Invoice Paid in Full</fullName>
                </value>
                <value>
                    <fullName>Non-Payment</fullName>
                    <label>Non Payment</label>
                </value>
                <value>
                    <fullName>Non-Payment sent to collections agency</fullName>
                    <label>Non Payment; Sent to Collections Agency</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Owner__c</fullName>
        <formula>Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp; Territory__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to Territory consolidated field</description>
        <inlineHelpText>Select the Territory field</inlineHelpText>
        <label>Territory</label>
        <referenceTo>Territory__c</referenceTo>
        <relationshipLabel>Accounts (Territory)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>This_is_HQ__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This is HQ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_AR__c</fullName>
        <description>Balance of money due to the Red Cross for goods and services on the Account. Includes invoiced transactions and pre-payments. </description>
        <formula>REPORT_Total_AR__c</formula>
        <inlineHelpText>Balance of money due to the Red Cross for goods and services on the Account. Includes invoiced transactions and pre-payments. </inlineHelpText>
        <label>Total AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waterpark__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates an account as an aquatics strategic target.  Not displayed on page layout, controlled centrally by Marketing &amp; Business Operations.</description>
        <label>Waterpark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nk_billto_org_id__c</fullName>
        <description>Created for Data migration-to be used by Finance on a regular basis.</description>
        <label>nk billto org id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Bucket_Account</fullName>
        <active>true</active>
        <description>The record type that represents Bucket Accounts which are used to store household accounts</description>
        <label>Bucket Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facility_Billing_Accounts_in_Account_Hierarchy</fullName>
        <active>true</active>
        <description>Facility + Billing Accounts in Account Hierarchy</description>
        <label>Facility Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_Account</fullName>
        <active>false</active>
        <description>The record type associated to the holding household records for individuals who will be dealing with the Training Support Center at PHSS.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Account</fullName>
        <active>true</active>
        <description>Learners and Instructors</description>
        <label>Individual Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization_Account</fullName>
        <active>true</active>
        <description>The record type most associated with accounts focused on Businesses and organizations dealing with PHSS</description>
        <label>Organization Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>SB_Household_Account</fullName>
        <active>false</active>
        <description>The record type associated to the holding household records for individuals who will be dealing with the Training Support Center at PHSS.</description>
        <label>SB Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>SB_Organization_Account</fullName>
        <active>true</active>
        <description>The record type most associated with accounts focused on Businesses and organizations dealing with PHSS</description>
        <label>SB Organization Account</label>
    </recordTypes>
</CustomObject>